Rename of method, change parameter when